@@ -48,8 +48,7 @@ V,E,F \- step two trianglesi, rotating about V,E,F,
 .IP
 according to: V=ef, E=fv, F=ve
 .IP
-Paths can start with either a move or a point, but cannot both
-start and end with a move
+Paths can start or end with either a move or a point
 .TP
 \fB\-c\fR <op>
 Conway polyhedron notation operator, or 'list' to list all
