@@ -6,9 +6,11 @@ XX-XX-21 Adrian Rossiter <adrian@antiprism.com>
             tetra59: generate the 59 tetrahedra with rational dihedral angles
          Changes
             to_nfold: use base colours
+            wythoff: allow any path
          Fixes
             dome_layer: honeycomb connections
             unitile2d: surface closing
+            wythoff: paths not starting with index
 
 Version 0.28
 13-02-21 Adrian Rossiter <adrian@antiprism.com>
